Archive2/b3/d89d6bfb52b791/output
main.cpp:1:1: error: stray '\357' in program
 preprocessing-ﬁle:
 ^
main.cpp:1:1: error: stray '\254' in program
main.cpp:1:1: error: stray '\201' in program
main.cpp:10:3: error: invalid preprocessing directive #non
 # non-directive
   ^
main.cpp:14:26: error: missing binary operator before token "new"
 # if constant-expression new-line groupopt
                          ^
main.cpp:15:0: error: unterminated #ifdef
 # ifdef identiﬁer new-line groupopt
 ^
main.cpp:14:0: error: unterminated #if
 # if constant-expression new-line groupopt
 ^
main.cpp:1:1: error: 'preprocessing' does not name a type
 preprocessing-ﬁle:
 ^
